@@ -7,20 +7,9 @@ struct ilist_struct
   ino_t inode;
 };
 
-/* comparison function for qsort/bsearch of ilist
- */
-static int
-compare_ilist (const void *a, const void *b)
-{
-  const struct ilist_struct * ilista = (const struct ilist_struct*) a;
-  const struct ilist_struct * ilistb = (const struct ilist_struct*) b;
-  int ret;
-  
-  ret = ilista->inode - ilistb->inode;
-  if (!ret)
-    {
-      ret = ilista->dev - ilistb->dev;
-    }
-  return ret;
-}
+void outofmemory(const char* msg);
+int ilistcreate(const char* ilistpath);
+int compare_ilist (const void *a, const void *b);
 
+
+extern const char* PRGNAME;
